<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/catalogue">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/keyboard"
                    android:icon="@drawable/ic_dinner"
                    android:title="@string/dinner" />
                <item
                    android:id="@+id/living_room"
                    android:icon="@drawable/ic_drink"
                    android:title="@string/drink" />
                <item
                    android:id="@+id/monitor"
                    android:icon="@drawable/ic_fastfood"
                    android:title="@string/fastfood" />
                <item
                    android:id="@+id/food"
                    android:icon="@drawable/ic_desert"
                    android:title="@string/desert" />
            </group>
        </menu>
    </item>

    <item android:title="@string/personal_data">
        <menu>
            <item
                android:id="@+id/data"
                android:icon="@drawable/ic_personal_data"
                android:title="@string/info" />
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
        </menu>
    </item>
</menu>