<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.orderplatform.MainActivity">

    <item
        android:id="@+id/action_shop"
        android:icon="@drawable/ic_shop_cart"
        android:orderInCategory="10"
        android:title="@string/shop_cart"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_setting"
        android:orderInCategory="20"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/todo"
        android:title="@string/todo"
        app:showAsAction="never" />
</menu>