<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.InfoFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/address_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/地址"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/info_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/address_text_view"
            app:layout_constraintStart_toEndOf="@+id/address_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_other">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/支付方式"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/main_photo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_wechat" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/main_photo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_alipay" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/main_photo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_visa" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/info_group"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="6"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/info_wechat"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#4CAF50"
                    android:text="@string/微信"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/info_alipay"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#2196F3"
                    android:text="@string/支付宝"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/info_visa"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#AA6565"
                    android:text="@string/银行卡"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20">

        <Button
            android:id="@+id/info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:text="@string/edit"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
