<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.OrderActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/order_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/order_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_back"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="订单"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/order_appbar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/姓名"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/填写姓名"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/name_text_view"
                    app:layout_constraintStart_toEndOf="@+id/name_text_view" />

                <TextView
                    android:id="@+id/address_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/地址"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_name" />

                <EditText
                    android:id="@+id/edit_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/address"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/address_text_view"
                    app:layout_constraintStart_toEndOf="@+id/address_text_view" />

                <TextView
                    android:id="@+id/other_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/备注"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_address" />

                <EditText
                    android:id="@+id/edit_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/other"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/other_text_view"
                    app:layout_constraintStart_toEndOf="@+id/other_text_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_other">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/支付方式"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/main_photo"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_wechat" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/main_photo"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_alipay" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/main_photo"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_visa" />
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/order_radio_group"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="6"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/wechat"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="#4CAF50"
                            android:text="@string/微信"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            tools:ignore="VisualLintButtonSize" />

                        <RadioButton
                            android:id="@+id/alipay"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="#2196F3"
                            android:text="@string/支付宝"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            tools:ignore="VisualLintButtonSize" />

                        <RadioButton
                            android:id="@+id/visa"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="#AA6565"
                            android:text="@string/银行卡"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                    </RadioGroup>
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/tool"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:minHeight="48dp"
                    android:text="@string/tools_need"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/touch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/touch_need"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <Button
                    android:id="@+id/order_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_500"
                    android:text="@string/submit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>